--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ funcsigs==1.0.2
 functools32==3.2.3.post2
 future==0.16.0
 futures==3.1.1
+gunicorn==19.7.1
 html5lib==0.9999999
 idna==2.5
 ipaddress==1.0.16
